# python-metar-taf-parser

./: .coveragerc  .flake8  .gitignore  .releaserc  .sonar-project.properties  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  package-lock.json  package.json  plan.md  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.agents/skills/python-pypi-package-builder/: SKILL.md
.agents/skills/python-pypi-package-builder/references/: architecture-patterns.md  ci-publishing.md  community-docs.md  library-patterns.md  pyproject-toml.md  release-governance.md  testing-quality.md  tooling-ruff.md  versioning-strategy.md
.agents/skills/python-pypi-package-builder/scripts/: scaffold.py
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml
.github/workflows/: github_release.yml  lint-pr.yml  main.yml  port-changes.yml  publish.yml  release.yml  stale.yml  validate-commit.yaml
metar_taf_parser/command/: common.py  metar.py  remark.py  taf.py
metar_taf_parser/commons/: converter.py  exception.py  i18n.py
metar_taf_parser/locale/: messages.pot
metar_taf_parser/locale/de/LC_MESSAGES/: messages.mo  messages.po
metar_taf_parser/locale/en/LC_MESSAGES/: messages.mo  messages.po
metar_taf_parser/locale/es/LC_MESSAGES/: messages.mo  messages.po
metar_taf_parser/locale/fr/LC_MESSAGES/: messages.mo  messages.po
metar_taf_parser/locale/it/LC_MESSAGES/: messages.mo  messages.po
metar_taf_parser/locale/pl/: messages.mo  messages.po
metar_taf_parser/locale/pl/LC_MESSAGES/: messages.mo  messages.po
metar_taf_parser/locale/ru-RU/LC_MESSAGES/: messages.mo  messages.po
metar_taf_parser/locale/tr/LC_MESSAGES/: messages.mo  messages.po
metar_taf_parser/locale/zh-CN/: messages.mo  messages.po
metar_taf_parser/locale/zh-CN/LC_MESSAGES/: messages.mo  messages.po
metar_taf_parser/model/: enum.py  model.py
metar_taf_parser/parser/: parser.py
metar_taf_parser/tests/command/: test_common.py  test_metar.py  test_remark.py  test_taf.py
metar_taf_parser/tests/common/: test_converter.py
metar_taf_parser/tests/commons/: test_i18n.py
metar_taf_parser/tests/parser/: test_new_features.py  test_parser.py
tests/command/: test_common.py  test_metar.py  test_remark.py
tests/common/: test_converter.py
tests/parser/: test_parser.py
