[metadata]
name = metar-taf-parser-mivek
version = 1.4.0
author = Jean-Kevin KPADEY
author_email = jeankevin.kpadey@gmail.com
description = Python project parsing metar and taf message
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mivek/python-metar-taf-parser
project_urls =
    Bug Tracker = https://github.com/mivek/python-metar-taf-parser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_file = LICENSE
keywords =
    metar
    taf
    parser
    icao
    airport

[options]
include_package_data = True
package_dir =
    = .
packages = find:
python_requires = >=3.6
tests_require =
    parameterized
    coverage

[options.packages.find]
exclude =
    metar_taf_parser.tests.common
    metar_taf_parser.tests.command
    metar_taf_parser.tests.parser
    metar_taf_parser.tests

[options.package_data]
* = locale/*/*/*.po, locale/*/*/*.mo, locale/*.pot
